tests/ui/resolve/fn-item-cant-capture-dynamic-env.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/fn-item-cant-capture-dynamic-env.rs:3:32
   |
LL |     fn foo() -> isize { return bar; }
   |                                ^^^
   |
   = help: consider converting this fn item to a closure to capture the dynamic environment

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0434`.
